--- a/styles/menu.css
+++ b/styles/menu.css
@@ -10,7 +10,7 @@
 3. Header
 4. Menu
 5. Home
-6. The Menu
+6. La Carta
 7. Signature Dishes
 8. Reservations
 9. Footer
@@ -603,7 +603,7 @@ section
 }
 
 /*********************************
-6. The Menu
+6. La Carta
 *********************************/
 
 .themenu
